# echo

./: CHANGELOG.md  Cargo.toml  README.md
issues/echo/done/: enhancement-2025-11-08-init-flowmates-workflow-and-rename-rbase-to-echo.md  feature-init-repo.md
issues/echo/in_progress/: enhancement-2025-11-08-init-flowmates-workflow-and-rename-rbase-to-echo.md  feature-init-repo.md
scripts/: pre-commit-hook
src/: main.rs
